--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "./app/shared/styles/resets.scss";
+@import "./app/shared/styles/variables.scss";
+
+body {
+  font-family: $font;
+  font-size: 16px;
+  font-weight: 400;
+  color: $text-color;
+}
+
+.title-bold {
+  font-weight: 700;
+}
+
+.title-color {
+color: $title-color;
+}
+
+.title-uppercase {
+  text-transform: uppercase;
+}
+
+h1 {
+  color: $white;
+  font-size: 1.875rem;
+  @extend .title-bold;
+}
+
+
+
+h2 {
+  @extend .title-color;
+  font-size: 2.25rem;
+  @extend .title-uppercase;
+}
+
+h3 {
+  @extend .title-color;
+  font-size: 1rem;
+  @extend .title-bold;
+  @extend .title-uppercase;
+}
+
+h4 {
+  color: $white;
+  @extend .title-uppercase;
+}
