--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,27 @@
-<p>
-  header works!
-</p>
+<header class="header">
+  <div class="container">
+    <div class="row">
+      <div class="header__content d-flex w-100 justify-content-between align-items-center">
+        <div class="logo">
+          <a href="" class="logo__link">
+            <img class="logo__img" src="./assets/images/logo.png" alt="">
+          </a>
+        </div>
+        <div class="header__title">
+          <h1 class="header__title_content">
+            Platform user’s choice
+          </h1>
+        </div>
+        <nav class="header-nav">
+          <app-navigation></app-navigation>
+        </nav>
+        <div class="header__btn">
+          <button [routerLink]="'/users'" class="btn__challenge">go to Challenge</button>
+        </div>
+        <div class="header__lang">
+          <app-lang></app-lang>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
