--- a/src/app/shared/styles/variables.scss
+++ b/src/app/shared/styles/variables.scss
@@ -10,3 +10,5 @@ $link-color: lighten(desaturate(adjust-hue($main-bg-color, -1), 37.25), 14.71); 
 
 $font: 'segoeUI', san-serif;
 $font-size: 16px;
+
+$hover-speed: .3s;
