--- a/src/assets/fonts/fonts.scss
+++ b/src/assets/fonts/fonts.scss
@@ -2,10 +2,10 @@ $font-path: '/assets/fonts/';
 $font-path-segoe: $font-path+'segoeUi/';
 @font-face {
   font-family: "segoeUI";
-  src: url($font-path-segoe + "bold/segoeui.eot");
-  src: url($font-path-segoe + "bold/segoeui.eot?#iefix") format("embedded-opentype"),  
-        url($font-path-segoe + "bold/segoeui.woff") format("woff"), 
-        url($font-path-segoe + "bold/segoeui.svg#SegoeUI") format("svg");
+  src: url($font-path-segoe + "bold/segoeuib.eot");
+  src: url($font-path-segoe + "bold/segoeuib.eot?#iefix") format("embedded-opentype"),  
+        url($font-path-segoe + "bold/segoeuib.woff") format("woff"), 
+        url($font-path-segoe + "bold/segoeuib.svg#SegoeUI") format("svg");
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
