--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,20 +15,22 @@ body {
 }
 
 .title-color {
-color: $title-color;
+  color: $title-color;
 }
 
 .title-uppercase {
   text-transform: uppercase;
 }
 
-h1 {
+.title-white {
   color: $white;
-  font-size: 1.875rem;
-  @extend .title-bold;
 }
 
-
+h1 {
+  font-size: 1.875rem;
+  @extend .title-bold;
+  @extend .title-white;
+}
 
 h2 {
   @extend .title-color;
@@ -38,12 +40,11 @@ h2 {
 
 h3 {
   @extend .title-color;
-  font-size: 1rem;
   @extend .title-bold;
   @extend .title-uppercase;
 }
 
 h4 {
-  color: $white;
+  @extend .title-white;
   @extend .title-uppercase;
 }
